# tulla

./: .gitignore  CLAUDE.md  HANDOVER-idea51.md  HANDOVER-research-ralph.md  LICENSE  NEURO-SYMBOLIC-WORKFLOW.md  RALPH-WORKFLOW.md  README.md  REAL-WORLD-TEST-FINDINGS.md  TODO-abduction-mode.md  discovery-ralph.sh  epistemology-ralph.sh  hygiene-lib.sh  implementation-ralph.sh  planning-ralph.sh  pyproject.toml  research-ralph.conf  research-ralph.sh  resume-from-r3.sh  run-implementation.sh  test-r2-verbatim.sh  test-r2.sh
ralph/: .gitignore  REAL-WORLD-TEST-FINDINGS.md  pyproject.toml
ralph/docs/: tulla-description.md
ralph/src/ralph/: cli.py  config.py
ralph/src/ralph/adapters/: claude_cli.py  claude_mock.py  ontology_mcp.py
ralph/src/ralph/commands/: status.py
ralph/src/ralph/core/: checkpoint.py  phase.py
ralph/src/ralph/hygiene/: __init__.py  args.py  check.py  startup_log.py  trap.py
ralph/src/ralph/infrastructure/: fact_update.py  logging.py
ralph/src/ralph/ports/: claude.py
ralph/src/tulla/: __init__.py  annotations.py  cli.py  config.py  namespaces.py
ralph/src/tulla/adapters/: claude_cli.py  claude_mock.py  codex_cli.py  ontology_mcp.py  opencode_cli.py
ralph/src/tulla/commands/: __init__.py  status.py
ralph/src/tulla/core/: phase.py  phase_facts.py  pipeline.py  shacl_gen.py
ralph/src/tulla/hygiene/: __init__.py  check.py  gate.py  help.py  preflight.py  trap.py
ralph/src/tulla/infrastructure/: logging.py
ralph/src/tulla/ontology/: phase-ontology.ttl  phase_shapes.py
ralph/src/tulla/ports/: claude.py  ontology.py
ralph/tests/: conftest.py  test_annotations.py  test_cli_workdir.py  test_config.py  test_namespaces.py
ralph/tests/adapters/: test_claude_cli.py  test_codex_cli.py  test_ontology_mcp.py
ralph/tests/commands/: test_status.py
ralph/tests/core/: test_checkpoint.py  test_d5_intent_preservation.py  test_discovery_intent.py  test_phase.py  test_phase_facts.py  test_pipeline.py  test_pipeline_intent.py  test_shacl_gen.py
ralph/tests/hygiene/: test_hygiene_args.py  test_hygiene_check.py  test_hygiene_gate.py  test_hygiene_help.py  test_hygiene_preflight.py  test_hygiene_startup_log.py  test_hygiene_trap.py  test_integration.py
ralph/tests/infrastructure/: test_fact_update.py  test_logging.py
ralph/tests/ontology/: test_adr_scope_coherence_shape.py  test_phase_shapes.py
ralph/tests/phases/discovery/: test_d1.py  test_d2.py  test_d3.py  test_d4.py  test_d5.py  test_pipeline.py
ralph/tests/phases/implementation/: test_annotation_prompt.py  test_annotation_resolution.py  test_annotation_verify.py  test_arch_context.py  test_import_graph.py  test_live_validation_gate.py
ralph/tests/phases/lightweight/: test_context_scan.py  test_intake.py  test_plan.py  test_shacl.py  test_trace.py
ralph/tests/phases/planning/: test_p1.py  test_p2.py  test_p3.py  test_p4.py  test_p5.py  test_p6.py  test_p6_hygiene.py  test_pipeline.py  test_planning_northstar.py
ralph/tests/phases/research/: test_parse_research.py  test_research_identity.py  test_research_integration.py  (+1 more)
(+297 files in other folders)
