[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tulla"
version = "0.1.0"
description = "Tulla – ontology-driven idea hygiene and lifecycle agent"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Hans-Peter Zorn", email = "hpz@zorns.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "structlog>=23.0",
    "rdflib>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyshacl>=0.26",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://tulla.dev"
Repository = "https://github.com/hpz/tulla"
Issues = "https://github.com/hpz/tulla/issues"

[project.scripts]
tulla = "tulla.cli:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-m 'not manual'"
markers = [
    "manual: tests requiring a running ontology-server (deselected by default)",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/tulla"]
