[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph"
version = "0.1.0"
description = "Ralph – ontology-driven idea hygiene and lifecycle agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]
