[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tulla"
version = "0.1.0"
description = "Tulla – ontology-driven idea hygiene and lifecycle agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
tulla = "tulla.cli:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["src/tulla"]
